# svZeroDSolver

./: .clang-format  .gitignore  .gitmodules  .licenserc.json  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md  _activation_function_8h.html  _activation_function_8h__dep__incl.map  _activation_function_8h__dep__incl.md5  _activation_function_8h__incl.map  _activation_function_8h__incl.md5  _activation_function_8h_source.html  _block_8h.html  _block_8h__dep__incl.map  _block_8h__dep__incl.md5  _block_8h__incl.map  _block_8h__incl.md5  _block_8h_source.html  _block_factory_8h.html  _block_factory_8h__dep__incl.map  _block_factory_8h__dep__incl.md5  _block_factory_8h__incl.map  _block_factory_8h__incl.md5  _block_factory_8h_source.html  _block_type_8h.html  _block_type_8h__dep__incl.map  _block_type_8h__dep__incl.md5  _block_type_8h__incl.map  _block_type_8h__incl.md5  _block_type_8h_source.html  _blood_vessel_8h.html  _blood_vessel_8h__dep__incl.map  _blood_vessel_8h__dep__incl.md5  _blood_vessel_8h__incl.map  _blood_vessel_8h__incl.md5  _blood_vessel_8h_source.html  _blood_vessel_c_r_l_8h.html  _blood_vessel_c_r_l_8h__dep__incl.map  (+789 more)
.github/: codecov.yml
applications/: .svzerodsolver.cpp.swp  calibrator.cpp  libsvzerodplus.cpp  pysvzerod.cpp  svzerodcalibrator.cpp  svzerodplus.cpp  svzerodsolver.cpp
container/: Dockerfile  entrypoint.sh
cpp/: _formulas.tex  algebra_2namespace_8hpp.html  algebra_2namespace_8hpp_source.html  annotated.html  block_8hpp.html  block_8hpp__dep__incl.map  block_8hpp__dep__incl.md5  block_8hpp__incl.map  block_8hpp__incl.md5  block_8hpp_source.html  blocktype_8hpp.html  blocktype_8hpp__dep__incl.map  blocktype_8hpp_source.html  bloodvessel_8hpp.html  bloodvessel_8hpp__dep__incl.map  bloodvessel_8hpp__dep__incl.md5  bloodvessel_8hpp__incl.map  bloodvessel_8hpp__incl.md5  bloodvessel_8hpp_source.html  bloodvesseljunction_8hpp.html  bloodvesseljunction_8hpp__dep__incl.map  bloodvesseljunction_8hpp__dep__incl.md5  bloodvesseljunction_8hpp__incl.map  bloodvesseljunction_8hpp__incl.md5  bloodvesseljunction_8hpp_source.html  calibrate_8hpp.html  calibrate_8hpp__incl.md5  calibrate_8hpp_source.html  citelist.html  class_a_l_g_e_b_r_a_1_1_dense_system-members.html  class_a_l_g_e_b_r_a_1_1_dense_system.html  class_a_l_g_e_b_r_a_1_1_integrator-members.html  class_a_l_g_e_b_r_a_1_1_integrator.html  class_a_l_g_e_b_r_a_1_1_sparse_system-members.html  class_a_l_g_e_b_r_a_1_1_sparse_system.html  class_a_l_g_e_b_r_a_1_1_state-members.html  class_a_l_g_e_b_r_a_1_1_state.html  class_i_o_1_1_config_reader-members.html  class_i_o_1_1_config_reader.html  class_i_o_1_1_json_handler-members.html  (+484 more)
distribution/: CMakeLists.txt  readme.txt
docs/: Doxyfile  references.bib
latex/: algebra_2namespace_8hpp.tex  algebra_2namespace_8hpp_source.tex  annotated.tex  bibTmpFile_1.bib  block_8hpp.tex  block_8hpp.tex.tmp  block_8hpp__dep__incl.dot  block_8hpp__dep__incl.md5  block_8hpp__incl.dot  block_8hpp__incl.md5  block_8hpp_source.tex  blocktype_8hpp.tex  blocktype_8hpp__dep__incl.dot  blocktype_8hpp_source.tex  bloodvessel_8hpp.tex  bloodvessel_8hpp__dep__incl.dot  bloodvessel_8hpp__dep__incl.md5  bloodvessel_8hpp__incl.dot  bloodvessel_8hpp__incl.md5  bloodvessel_8hpp_source.tex  bloodvesseljunction_8hpp.tex  bloodvesseljunction_8hpp__dep__incl.dot  bloodvesseljunction_8hpp__dep__incl.md5  bloodvesseljunction_8hpp__incl.dot  bloodvesseljunction_8hpp__incl.md5  bloodvesseljunction_8hpp_source.tex  calibrate_8hpp.tex  calibrate_8hpp__incl.dot  calibrate_8hpp_source.tex  citelist.tex  class_a_l_g_e_b_r_a_1_1_dense_system.tex  class_a_l_g_e_b_r_a_1_1_integrator.tex  class_a_l_g_e_b_r_a_1_1_sparse_system.tex  class_a_l_g_e_b_r_a_1_1_state.tex  class_i_o_1_1_config_reader.tex  class_i_o_1_1_json_handler.tex  class_m_o_d_e_l_1_1_block.eps  class_m_o_d_e_l_1_1_block.tex  class_m_o_d_e_l_1_1_block__inherit__graph.dot  class_m_o_d_e_l_1_1_block__inherit__graph.md5  (+312 more)
paper/: paper.bib  paper.md
python/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  svzerodsolver.html  svzerodsolver.model.html
scripts/: BloodVessel.yaml  README.md  (+7 more)
src/algebra/: CMakeLists.txt  Integrator.cpp  Integrator.h  SparseSystem.cpp  SparseSystem.h  State.cpp  State.h  densesystem.hpp  integrator.hpp  namespace.h  namespace.hpp  sparsesystem.hpp  state.h  state.hpp
src/helpers/: CMakeLists.txt  debug.hpp  endswith.hpp  helpers.cpp  namespace.hpp  startswith.hpp
src/interface/: CMakeLists.txt  interface.cpp  interface.h
src/io/: CMakeLists.txt  SimulationParameters.cpp  SimulationParameters.h  configreader.hpp  csvwriter.h  csvwriter.hpp  io.h  jsonhandler.hpp  jsonwriter.hpp  namespace.hpp
src/model/: ActivationFunction.cpp  ActivationFunction.h  Block.cpp  Block.h  BlockFactory.h  BlockType.h  BloodVessel.cpp  BloodVessel.h  BloodVesselCRL.cpp  BloodVesselCRL.h  BloodVesselCRLRedesigned.cpp  BloodVesselFC.cpp  BloodVesselFC.h  BloodVesselJunction.cpp  BloodVesselJunction.h  BloodVesselNew.cpp  BloodVesselNew.h  BloodVesselRC.cpp  BloodVesselRC.h  CLHPulmonary.cpp  CLHPulmonary.h  CMakeLists.txt  Capacitance.cpp  Capacitance.h  ChamberElastanceInductor.cpp  ChamberElastanceInductor.h  ChamberElastanceInductorExponential.cpp  ChamberElastanceInductorExponential.h  ChamberKerckhoffs.cpp  ChamberKerckhoffs.h  ChamberSphere.cpp  ChamberSphere.h  ClosedLoopCoronaryBC.cpp  ClosedLoopCoronaryBC.h  ClosedLoopCoronaryLeftBC.cpp  ClosedLoopCoronaryLeftBC.h  ClosedLoopCoronaryRightBC.cpp  ClosedLoopCoronaryRightBC.h  ClosedLoopHeartPulmonary.cpp  ClosedLoopHeartPulmonary.h  (+97 more)
src/optimize/: CMakeLists.txt  LevenbergMarquardtOptimizer.cpp  LevenbergMarquardtOptimizer.h  calibrate.cpp  calibrate.h  calibrate.hpp  levenbergmarquardtoptimizer.h  levenbergmarquardtoptimizer.hpp  namespace.cpp
src/solve/: .Solver.cpp.swp  .Solver.h.swp  CMakeLists.txt  SimulationParameters.cpp  SimulationParameters.h  Solver.cpp  Solver.h  csv_writer.cpp  csv_writer.h  csvwriter.cpp  csvwriter.h  debug.h  helpers.cpp  helpers.h  io.cpp  io.h  namespace.h  solver.hpp
(+692 files in other folders)
