[build-system]
requires = ["scikit-build-core>=0.10", "cmake", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pysvzerod"
version = "dynamic"
description = "svZeroDSolver"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }

[tool.pytest.ini_options]
addopts = """
    --ignore=Release
    --ignore=Debug
"""
