[build-system]
requires = ["scikit-build-core>=0.10", "cmake", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pysvzerod"
version = "2.0"
description = "svZeroDSolver"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "networkx>=2.8",
  "graphviz",
  "pydot",
]

[tool.pytest.ini_options]
addopts = """
    --ignore=Release
    --ignore=Debug
"""
