[metadata]
name = svzerodplus
version = 2.0
description = A fast C++ application for working with 0D models.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.0
install_requires =
    numpy
    scipy
    orjson
    click
    orjson # Faster than json
    pyarrow # For faster csv reading
    pandas

[options.extras_require]
dev = 
    pytest
    pytest-cov
    pytest-mock
    sphinx
    sphinx-autodoc-typehints
    m2r2
    pydata-sphinx-theme
    sphinxcontrib-bibtex
    sphinxcontrib-mermaid

[options.entry_points]
console_scripts =
    svzerodsolver = svzerodplus:run_simulation_cli
    svzerodcalibrator = svzerodplus:run_calibration_cli

