[metadata]
name = pysvzerod
version = 2.0
description = A fast C++ application for working with 0D models.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.0
install_requires =
    pandas
    numpy

[options.extras_require]
dev = 
    pytest

[options.entry_points]
console_scripts =
    svzerodsolver = pysvzerod:run_simulation_cli
    svzerodcalibrator = pysvzerod:run_calibration_cli
